python/note.txt
js angular react jquery

php laravel simphony base de datos SQL

css sass butstrap tweilwind

html html5





python django


python :: inicia 

>>> 5+5
10
>>> print(9+6)
15
>>> print(56**9)
5416169448144896
>>> 5*6*6/56
3.2142857142857144
>>> 21/5
4.2
>>> 21 // 5
4
>>> 21 % 5
1
>>> import math
import 'math' # <class '_frozen_importlib.BuiltinImporter'>
>>>
>>> a = math.sqrt( 25)
>>> print(a)
5.0
>>>


primero los parentesis
despiues potencias y raices
despues multiplicaciones y diviciones
y por ultimo la suma y rezta



variable es un simbolo constituyente de un predicado, formula, algoritmo o d euna preposición, 

>>> 5+5
10
>>> print(9+6)
15
>>> print(56**9)
5416169448144896
>>> 5*6*6/56
3.2142857142857144
>>> 21/5
4.2
>>> 21 // 5
4
>>> 21 % 5
1
>>> import math
import 'math' # <class '_frozen_importlib.BuiltinImporter'>
>>>
>>> a = math.sqrt( 25)
>>> print(a)
5.0
>>> numero1 = 5
>>> numero2 = 6
>>> numero1 + numero 2
  File "<stdin>", line 1
    numero1 + numero 2
                     ^
SyntaxError: invalid syntax
>>> numero1 + numero2
11
>>> numero1 - numero2
-1
>>> numero1 * numero2
30
>>> numero1 / numero2
0.8333333333333334
>>> content_num = numero1 +  numero2
>>> content_num
11
>>>}



>>> nombre1 = 'Sara'
>>> nombre2 = 'Lola'
>>> nombre1 + ', ' + nombre2
'Sara, Lola'
>>>




>>> numero1 = input('Escribe un número: ')
Escribe un número: 56
>>> numero2 = input('Escribe un número: ')
Escribe un número: 23
>>> numero1+ numero2
'5623'
>>>
>>> numero1 = int(numero1)
>>> numero2 = int(numero2)
>>> numero1 + numero2
79
>>>


OPERADORES LOGICOS



>>> es_estudiante = True
>>> es_estudiante
True
>>> trabaja = False
>>> trabaja
False
>>> es_estudiante and trabaja
False
>>> es_estudiante or trabaja
True
>>> not es_estudiante
False
>>> not trabaja
True
>>>



OPERADORES DE COMPARACIÓN


>>> numero1 = 5
>>> numero2 = 5
>>> numero3 = 6
>>> numero1
5
>>> numero2
5
>>> numero3
6
>>> numeor1 == numero2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'numeor1' is not defined
>>> numero1 == numero2
True
>>> numero1 == numero3
False
>>> numero1 != numero3
True
>>> numero1 > numero3
False
>>> numero1 < numero3
True
>>> numero1 >= numero3
False
>>> numero1 >= numero2
True
>>> numero1 <= numero2
True
>>> numero1 <= numero3
True
>>>




# modificar strings



>>> name = input("What is your name?")
What is your name?erein
>>> name
'erein '
>>> name.upper()
'EREIN '
>>> nombre.capitalize()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nombre' is not defined
>>> name.capitalize()
'Erein '
>>> name = name.capitalize()
>>> name
'Erein '
>>> name = name.strip()
>>> name
'Erein'
>>> name = name.lower()
>>> name
'erein'
>>> name = name.raplace('e', 'i')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'raplace'
>>> name = name.replace('e', 'i')
>>> name
'iriin'
>>> name[0]
'i'
>>> name[0:5]
'iriin'
>>> len name
  File "<stdin>", line 1
    len name
           ^
SyntaxError: invalid syntax
>>> len(name)
5
>>> len("Hi Bitch!")
9
>>>




>>> nombre = 'Francisco'
>>> nombre
'Francisco'
>>> nombre[0]
'F'
>>> nombre[1]
'r'
>>> nombre[0:3]
'Fra'
>>> nombre[:3]
'Fra'
>>> nombre[3:]
'ncisco'
>>> nombre[1:7]
'rancis'
>>> nombre[1:7:2]
'rni'
>>> nombre[::]
'Francisco'
>>> nombre[1::3]
'rcc'
>>> nombre[::-1]
'ocsicnarF'
>>> 







PS C:\Users\erwin\OneDrive\Documentos\Desarrollo Web\progbasica\python> python .\number.py
Ingres a number between 1 and 100: 55
Enter a larger number!
Choose a diferent number please.66
Enter a larger number!
Choose a diferent number please.88
Enter a lower number!
Choose a diferent number please.77
Enter a larger number!
Choose a diferent number please.79
Enter a larger number!
Choose a diferent number please.82
Congratulations, You WIN !!
PS C:\Users\erwin\OneDrive\Documentos\Desarrollo Web\progbasica\python>
PS C:\Users\erwin\OneDrive\Documentos\Desarrollo Web\progbasica\python> python
Python 3.7.9 (tags/v3.7.9:13c94747c7, Aug 17 2020, 16:30:00) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> numero = 1
>>> numero
1
>>> numero = 4
>>> numero
4
>>> numeros= [1, 3, 6, 7, 9, 10, 55, 36, 45, 55, 46464]
>>> numeros
[1, 3, 6, 7, 9, 10, 55, 36, 45, 55, 46464]
>>> objetos = ['Hi Bitch', 69, 666, True]
>>> objetos
['Hi Bitch', 69, 666, True]
>>> objetos.append(False, 4.25)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: append() takes exactly one argument (2 given)
>>> objetos.append(False)
>>> objetos.append(4.25)
>>> objetos.append('4.25')
>>> objetos
['Hi Bitch', 69, 666, True, False, 4.25, '4.25']
>>> objetos.pop(6)
'4.25'
>>> objetos
['Hi Bitch', 69, 666, True, False, 4.25]
>>> for element in onjetos:
...     print(element)
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'onjetos' is not defined
>>> for element in objetos:
...     print(element)
...
Hi Bitch
69
666
True
False
4.25
>>>